flutter_pcsc_macos/lib/src/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings to PCSC.Framework (took headers from pcsclite)
class NativeLibraryWinscard {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibraryWinscard(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibraryWinscard.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  late final ffi.Pointer<SCARD_IO_REQUEST> _g_rgSCardT0Pci =
      _lookup<SCARD_IO_REQUEST>('g_rgSCardT0Pci');

  SCARD_IO_REQUEST get g_rgSCardT0Pci => _g_rgSCardT0Pci.ref;

  late final ffi.Pointer<SCARD_IO_REQUEST> _g_rgSCardT1Pci =
      _lookup<SCARD_IO_REQUEST>('g_rgSCardT1Pci');

  SCARD_IO_REQUEST get g_rgSCardT1Pci => _g_rgSCardT1Pci.ref;

  late final ffi.Pointer<SCARD_IO_REQUEST> _g_rgSCardRawPci =
      _lookup<SCARD_IO_REQUEST>('g_rgSCardRawPci');

  SCARD_IO_REQUEST get g_rgSCardRawPci => _g_rgSCardRawPci.ref;

  ffi.Pointer<ffi.Int8> pcsc_stringify_error(
    int arg0,
  ) {
    return _pcsc_stringify_error(
      arg0,
    );
  }

  late final _pcsc_stringify_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(LONG)>>(
          'pcsc_stringify_error');
  late final _pcsc_stringify_error = _pcsc_stringify_errorPtr
      .asFunction<ffi.Pointer<ffi.Int8> Function(int)>();

  int SCardEstablishContext(
    int dwScope,
    LPCVOID pvReserved1,
    LPCVOID pvReserved2,
    LPSCARDCONTEXT phContext,
  ) {
    return _SCardEstablishContext(
      dwScope,
      pvReserved1,
      pvReserved2,
      phContext,
    );
  }

  late final _SCardEstablishContextPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(DWORD, LPCVOID, LPCVOID,
              LPSCARDCONTEXT)>>('SCardEstablishContext');
  late final _SCardEstablishContext = _SCardEstablishContextPtr.asFunction<
      int Function(int, LPCVOID, LPCVOID, LPSCARDCONTEXT)>();

  int SCardReleaseContext(
    int hContext,
  ) {
    return _SCardReleaseContext(
      hContext,
    );
  }

  late final _SCardReleaseContextPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDCONTEXT)>>(
          'SCardReleaseContext');
  late final _SCardReleaseContext =
      _SCardReleaseContextPtr.asFunction<int Function(int)>();

  int SCardIsValidContext(
    int hContext,
  ) {
    return _SCardIsValidContext(
      hContext,
    );
  }

  late final _SCardIsValidContextPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDCONTEXT)>>(
          'SCardIsValidContext');
  late final _SCardIsValidContext =
      _SCardIsValidContextPtr.asFunction<int Function(int)>();

  int SCardConnect(
    int hContext,
    LPCSTR szReader,
    int dwShareMode,
    int dwPreferredProtocols,
    LPSCARDHANDLE phCard,
    LPDWORD pdwActiveProtocol,
  ) {
    return _SCardConnect(
      hContext,
      szReader,
      dwShareMode,
      dwPreferredProtocols,
      phCard,
      pdwActiveProtocol,
    );
  }

  late final _SCardConnectPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(SCARDCONTEXT, LPCSTR, DWORD, DWORD, LPSCARDHANDLE,
              LPDWORD)>>('SCardConnect');
  late final _SCardConnect = _SCardConnectPtr.asFunction<
      int Function(int, LPCSTR, int, int, LPSCARDHANDLE, LPDWORD)>();

  int SCardReconnect(
    int hCard,
    int dwShareMode,
    int dwPreferredProtocols,
    int dwInitialization,
    LPDWORD pdwActiveProtocol,
  ) {
    return _SCardReconnect(
      hCard,
      dwShareMode,
      dwPreferredProtocols,
      dwInitialization,
      pdwActiveProtocol,
    );
  }

  late final _SCardReconnectPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(
              SCARDHANDLE, DWORD, DWORD, DWORD, LPDWORD)>>('SCardReconnect');
  late final _SCardReconnect = _SCardReconnectPtr.asFunction<
      int Function(int, int, int, int, LPDWORD)>();

  int SCardDisconnect(
    int hCard,
    int dwDisposition,
  ) {
    return _SCardDisconnect(
      hCard,
      dwDisposition,
    );
  }

  late final _SCardDisconnectPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDHANDLE, DWORD)>>(
          'SCardDisconnect');
  late final _SCardDisconnect =
      _SCardDisconnectPtr.asFunction<int Function(int, int)>();

  int SCardBeginTransaction(
    int hCard,
  ) {
    return _SCardBeginTransaction(
      hCard,
    );
  }

  late final _SCardBeginTransactionPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDHANDLE)>>(
          'SCardBeginTransaction');
  late final _SCardBeginTransaction =
      _SCardBeginTransactionPtr.asFunction<int Function(int)>();

  int SCardEndTransaction(
    int hCard,
    int dwDisposition,
  ) {
    return _SCardEndTransaction(
      hCard,
      dwDisposition,
    );
  }

  late final _SCardEndTransactionPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDHANDLE, DWORD)>>(
          'SCardEndTransaction');
  late final _SCardEndTransaction =
      _SCardEndTransactionPtr.asFunction<int Function(int, int)>();

  int SCardStatus(
    int hCard,
    LPSTR mszReaderName,
    LPDWORD pcchReaderLen,
    LPDWORD pdwState,
    LPDWORD pdwProtocol,
    LPBYTE pbAtr,
    LPDWORD pcbAtrLen,
  ) {
    return _SCardStatus(
      hCard,
      mszReaderName,
      pcchReaderLen,
      pdwState,
      pdwProtocol,
      pbAtr,
      pcbAtrLen,
    );
  }

  late final _SCardStatusPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(SCARDHANDLE, LPSTR, LPDWORD, LPDWORD, LPDWORD, LPBYTE,
              LPDWORD)>>('SCardStatus');
  late final _SCardStatus = _SCardStatusPtr.asFunction<
      int Function(int, LPSTR, LPDWORD, LPDWORD, LPDWORD, LPBYTE, LPDWORD)>();

  int SCardGetStatusChange(
    int hContext,
    int dwTimeout,
    ffi.Pointer<SCARD_READERSTATE> rgReaderStates,
    int cReaders,
  ) {
    return _SCardGetStatusChange(
      hContext,
      dwTimeout,
      rgReaderStates,
      cReaders,
    );
  }

  late final _SCardGetStatusChangePtr = _lookup<
      ffi.NativeFunction<
          LONG Function(SCARDCONTEXT, DWORD, ffi.Pointer<SCARD_READERSTATE>,
              DWORD)>>('SCardGetStatusChange');
  late final _SCardGetStatusChange = _SCardGetStatusChangePtr.asFunction<
      int Function(int, int, ffi.Pointer<SCARD_READERSTATE>, int)>();

  int SCardControl(
    int hCard,
    int dwControlCode,
    LPCVOID pbSendBuffer,
    int cbSendLength,
    LPVOID pbRecvBuffer,
    int cbRecvLength,
    LPDWORD lpBytesReturned,
  ) {
    return _SCardControl(
      hCard,
      dwControlCode,
      pbSendBuffer,
      cbSendLength,
      pbRecvBuffer,
      cbRecvLength,
      lpBytesReturned,
    );
  }

  late final _SCardControlPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(SCARDHANDLE, DWORD, LPCVOID, DWORD, LPVOID, DWORD,
              LPDWORD)>>('SCardControl');
  late final _SCardControl = _SCardControlPtr.asFunction<
      int Function(int, int, LPCVOID, int, LPVOID, int, LPDWORD)>();

  int SCardTransmit(
    int hCard,
    ffi.Pointer<SCARD_IO_REQUEST> pioSendPci,
    LPCBYTE pbSendBuffer,
    int cbSendLength,
    ffi.Pointer<SCARD_IO_REQUEST> pioRecvPci,
    LPBYTE pbRecvBuffer,
    LPDWORD pcbRecvLength,
  ) {
    return _SCardTransmit(
      hCard,
      pioSendPci,
      pbSendBuffer,
      cbSendLength,
      pioRecvPci,
      pbRecvBuffer,
      pcbRecvLength,
    );
  }

  late final _SCardTransmitPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(
              SCARDHANDLE,
              ffi.Pointer<SCARD_IO_REQUEST>,
              LPCBYTE,
              DWORD,
              ffi.Pointer<SCARD_IO_REQUEST>,
              LPBYTE,
              LPDWORD)>>('SCardTransmit');
  late final _SCardTransmit = _SCardTransmitPtr.asFunction<
      int Function(int, ffi.Pointer<SCARD_IO_REQUEST>, LPCBYTE, int,
          ffi.Pointer<SCARD_IO_REQUEST>, LPBYTE, LPDWORD)>();

  int SCardListReaderGroups(
    int hContext,
    LPSTR mszGroups,
    LPDWORD pcchGroups,
  ) {
    return _SCardListReaderGroups(
      hContext,
      mszGroups,
      pcchGroups,
    );
  }

  late final _SCardListReaderGroupsPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDCONTEXT, LPSTR, LPDWORD)>>(
          'SCardListReaderGroups');
  late final _SCardListReaderGroups =
      _SCardListReaderGroupsPtr.asFunction<int Function(int, LPSTR, LPDWORD)>();

  int SCardListReaders(
    int hContext,
    LPCSTR mszGroups,
    LPSTR mszReaders,
    LPDWORD pcchReaders,
  ) {
    return _SCardListReaders(
      hContext,
      mszGroups,
      mszReaders,
      pcchReaders,
    );
  }

  late final _SCardListReadersPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(
              SCARDCONTEXT, LPCSTR, LPSTR, LPDWORD)>>('SCardListReaders');
  late final _SCardListReaders = _SCardListReadersPtr.asFunction<
      int Function(int, LPCSTR, LPSTR, LPDWORD)>();

  int SCardFreeMemory(
    int hContext,
    LPCVOID pvMem,
  ) {
    return _SCardFreeMemory(
      hContext,
      pvMem,
    );
  }

  late final _SCardFreeMemoryPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDCONTEXT, LPCVOID)>>(
          'SCardFreeMemory');
  late final _SCardFreeMemory =
      _SCardFreeMemoryPtr.asFunction<int Function(int, LPCVOID)>();

  int SCardCancel(
    int hContext,
  ) {
    return _SCardCancel(
      hContext,
    );
  }

  late final _SCardCancelPtr =
      _lookup<ffi.NativeFunction<LONG Function(SCARDCONTEXT)>>('SCardCancel');
  late final _SCardCancel = _SCardCancelPtr.asFunction<int Function(int)>();

  int SCardGetAttrib(
    int hCard,
    int dwAttrId,
    LPBYTE pbAttr,
    LPDWORD pcbAttrLen,
  ) {
    return _SCardGetAttrib(
      hCard,
      dwAttrId,
      pbAttr,
      pcbAttrLen,
    );
  }

  late final _SCardGetAttribPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(
              SCARDHANDLE, DWORD, LPBYTE, LPDWORD)>>('SCardGetAttrib');
  late final _SCardGetAttrib =
      _SCardGetAttribPtr.asFunction<int Function(int, int, LPBYTE, LPDWORD)>();

  int SCardSetAttrib(
    int hCard,
    int dwAttrId,
    LPCBYTE pbAttr,
    int cbAttrLen,
  ) {
    return _SCardSetAttrib(
      hCard,
      dwAttrId,
      pbAttr,
      cbAttrLen,
    );
  }

  late final _SCardSetAttribPtr = _lookup<
      ffi.NativeFunction<
          LONG Function(SCARDHANDLE, DWORD, LPCBYTE, DWORD)>>('SCardSetAttrib');
  late final _SCardSetAttrib =
      _SCardSetAttribPtr.asFunction<int Function(int, int, LPCBYTE, int)>();
}

@ffi.Packed(1)
class SCARD_READERSTATE extends ffi.Struct {
  external ffi.Pointer<ffi.Int8> szReader;

  external ffi.Pointer<ffi.Void> pvUserData;

  @DWORD()
  external int dwCurrentState;

  @DWORD()
  external int dwEventState;

  @DWORD()
  external int cbAtr;

  @ffi.Array.multi([33])
  external ffi.Array<ffi.Uint8> rgbAtr;
}

typedef DWORD = ffi.Uint32;

/// Protocol Control Information (PCI)
@ffi.Packed(1)
class SCARD_IO_REQUEST extends ffi.Struct {
  /// < Protocol identifier
  @ffi.Uint64()
  external int dwProtocol;

  /// < Protocol Control Inf Length
  @ffi.Uint64()
  external int cbPciLength;
}

typedef LONG = ffi.Int32;
typedef LPCVOID = ffi.Pointer<ffi.Void>;
typedef LPSCARDCONTEXT = ffi.Pointer<SCARDCONTEXT>;
typedef SCARDCONTEXT = LONG;
typedef LPCSTR = ffi.Pointer<ffi.Int8>;
typedef LPSCARDHANDLE = ffi.Pointer<SCARDHANDLE>;
typedef SCARDHANDLE = LONG;
typedef LPDWORD = ffi.Pointer<DWORD>;
typedef LPSTR = ffi.Pointer<ffi.Int8>;
typedef LPBYTE = ffi.Pointer<BYTE>;
typedef BYTE = ffi.Uint8;
typedef LPVOID = ffi.Pointer<ffi.Void>;
typedef LPCBYTE = ffi.Pointer<BYTE>;
